--- a/style/style.css
+++ b/style/style.css
@@ -33,7 +33,6 @@
     width: 100%;
     min-height: 100%;
     overflow: hidden;
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
 }
@@ -65,6 +64,9 @@
     background-color: white;
     display: flex;
     align-items: center;
+}
+.header-top__logo {
+    display: none;
 }
 .header-top__link {
     color: #efefef;
@@ -104,6 +106,53 @@
 .header-top__set-el:first-child {
     margin-right: 30px;
 }
+.header-top__search {
+    display: none;
+}
+@media all and (max-width: 800px) {
+    .header-top__data {
+        display: none;
+    }
+    .header-top__block {
+        display: flex;
+    }
+    .header-top__personal:before {
+        content: "";
+        display: inline-block;
+        width: 19px;
+        height: 14px;
+        background: url(../image/icon/burger.png) center / contain no-repeat;
+    }
+    .header-top__search {
+        padding: 0 0 0 20px;
+    }
+    .header-top__search {
+        content: "";
+        display: inline-block;
+        width: 17px;
+        height: 18px;
+        background: url(../image/icon/search1.png) center / contain no-repeat;
+    }
+    .header-top__logo {
+        display: block;
+        width: 94px;
+        height: 100%;
+    }
+    .header-top__item_flex {
+        flex: 1 1 auto;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 16px;
+    }
+    .header-top__set-el:first-child {
+        margin-right: 9px;
+    }
+    .header-middle, .header-bottom, .header-top__item_center, .header-top__item_logo {
+        display: none;
+    }
+
+    
+}
 .icon-block {
     display: flex;
     align-items: center;
@@ -141,20 +190,20 @@
     padding: 34px 0;
 
 }
-.header-middle__location {
+.location__group {
     display: flex;
     align-items: center;
 }
-.header-middle__link_right {
+.location__link_right {
     margin-right: 34px;
 }
 
-.header-middle__geo {
+.location__geo {
     width: 12px;
     height: 14px;
     margin-right: 9px;
 }
-.header-middle__link {
+.location__link {
     font: .75em/.94em "Geometria";
     color: #3a3a3a;
 }
@@ -270,6 +319,7 @@
     background: url(../image/blouse.png) center / contain no-repeat;
     width: 95px;
     height: 138px;
+    
 }
 .content__card-wrap {
     display: flex;
@@ -290,7 +340,12 @@
     font-family: "Geometria-medium" ;
     margin: 0 0 14px 0;
 }
-
+.content__card-rebate {
+    display: none;
+    margin: 18px 0 30px 0;
+    text-decoration: line-through;
+    
+}
 .content__card-color {
     margin-bottom: 16px;
 }
@@ -323,47 +378,79 @@
 }
 .icon-block__del {
     margin: 0 0 0 22px;
-
+    
+}
+.content__card-close {
+    display: none;
+}
+.content__card-close::after {
+    content: "";
+    background: url(../image/icon/deleted.png) center / contain no-repeat;
+    width: 18px;
+    height: 18px;
+    display: inline-block;
 }
 .content-purchases {
-    padding: 10px 0;
-    font: .6875em/.94em "Geometria-Light";
+    border: 1px solid #f8f8f8;
+    font: .75em/.94em "Geometria-Light";
     color: #3a3a3a;
     display: flex;
     max-width: 342px;
     flex-wrap: wrap;
     position: absolute;
-    top: 40px;
+    top: 30px;
     right: 0;
 }
-.content-purchases__el {
-    flex: 0 1 100%;
-    
-}
-.content-purchases__el:first-child {
-    margin: 0 0 14px 17px;
-}
-.content-purchases__promo {
-    color: #3a3a3a;
-    border-bottom: 1px dotted #3a3a3a;
-}
-.content-purchases__el-flex {
+
+
+.content-purchases__flex {
     display: flex;
     flex-direction: column;
     background-color: #f8f8f8;
     padding: 28px 17px;
 }
-
-.content-purchases__cost,.content-purchases__discount,.content-purchases__delivery {
+.content__input {
+    display: none;
+}
+.content__input-promo{
+    padding: 12px 0 12px 12px;
+    width: 290px;
+    height: 40px;
+    border: 1px solid #d9d9d9;
+    color: #3a3a3a;
+    position: relative; 
+}
+.content__input-bth {
+    width: 40px;
+    height: 40px;
+    background-color: #3a3a3a;
+    color: #ffff;
+    position: absolute;
+}
+    
+.content-purchases__cost,.content-purchases__discount,.content-purchases__delivery, .content-purchases__group {
     padding: 0 0 14px 0;
     display: flex;
     justify-content: space-between;
     
 }
+.content-purchases__group {
+    margin: 14px 0 0px 17px;
+    
+}
+.content-purchases__input {
+    width: 250px;
+}
 
+.content-purchases__promo{
+    border-bottom: 1px dotted #3a3a3a ;
+}
 .content-purchases__total {
     text-transform: uppercase;
     font-family: "Geometria-Bold";
+}
+.content-purchases__rebate {
+    display: none;
 }
 .content-purchases__delivery {
     border-bottom: 1px solid #e6e7e7;
@@ -398,6 +485,7 @@
     text-align: center;
     margin: 30px 0;
     padding: 20px 0;
+    
 }
 .content__reference-el {
     font: .75em/.94em "Geometria";
@@ -445,6 +533,9 @@
 .icon-block__img_right {
     background-image: url(../image/icon/right_arrow.png);
 }
+.content__card-bth {
+    display: none;
+}
 .content__reference-text {
     margin: 0 0 14px 0;
 }
@@ -453,6 +544,110 @@
     border: 1px solid #3a3a3a;
     margin-top: 56px;
 }
+.content-purchase__button {
+    display: none;
+    text-align: center;
+}
+.content-purchase__bth {
+    font-family: "Geometria";
+    font-size: inherit;
+    border-bottom: 1px solid #b3b3b3;
+    color: #3a3a3a;
+    max-width: 166px;
+    margin: 20px 0 12px 0;
+}
+@media all and (max-width: 800px) {
+    .content__title-amount {
+        display: none;
+    } 
+    .content__title-el_flex {
+        flex: 0 1 auto;
+    }
+    .content__title {
+        border: none;
+    }
+    .content__card {
+        max-width: 386px;
+        justify-content: space-between;
+        border-bottom: 1px dotted #c9c9c9;
+    }
+    .content__card-wrap {
+        flex-direction: column;
+        
+    }
+    .content__card-rebate {
+        display: inline-block;
+    }
+    .content__card-rebate::after{
+        text-decoration: none;
+        content: "5999 ₽";
+        color: #ff5300;
+        margin: 0 0 0 10px;
+        display: inline-block;
+    }
+    .content__card-size {
+        margin-bottom: 26px;
+    }
+    .content__card-quantity {
+        margin-bottom: 20px;
+    }
+    .content__card-amount div {
+        display: none;
+        
+    }
+    .content__card-amount {
+        color: #ff5300;
+        margin-bottom: 20px;
+    }
+    .content__card-close {
+        display: inline-block;
+    }
+    .content-purchases__input {
+        display: none;
+    }
+    .content__input {
+        display: block;
+    }
+    .content-purchases__rebate {
+        display: block;
+        text-align: center;
+        margin: 13px 20px 19px 20px;
+        flex: 1 1 auto;
+    }
+    .content-purchases__offer {
+        display: none;
+    }
+    .content-purchase__button {
+        display: block;
+    }
+    .icon-block_none {
+        display: none;
+    }
+    .content__card-bth {
+        display: block;
+    }
+    .content__card-bth button {
+        text-transform: uppercase;
+        border-bottom: 1px solid #b7b7b7;
+        font-size: inherit;
+        color: #b7b7b7;
+        font-family: "Geometria-medium";
+    }
+    .icon-block__img_left, .icon-block__img_right {
+        display: none;
+    }
+    .content__reference-product_del {
+        display: none;
+    }
+    .content__reference-img {
+        padding-top: 160%;
+    }
+    .bth_bottom {
+        width: 100%;
+    }
+    
+}
+
 .footer-top__wrap {
     padding: 50px 0;
     font-family: "Geometria-Italic";
@@ -473,6 +668,7 @@
 }
 .footer-bottom {
     margin: 95px 0 52px 0;
+    position: relative;
 
 }
 .footer-bottom__wrap {
@@ -491,7 +687,8 @@
     flex: 0 1 30%;
     
 } 
-.footer-bottom__heading {
+
+.footer-bottom__heading, .footer-bottom__list_heading {
     font: .75em/.94em "Geometria-Bold";
 }
 .footer-bottom__heading li {
@@ -501,10 +698,7 @@
     font-family:  "Geometria";
     color: #3a3a3a;
 }
-.footer-bottom {
-    position: relative;
 
-}
 .footer-bottom__input-gpoup {
     width: 200px;
     position: absolute;
@@ -536,4 +730,79 @@
     color: #3a3a3a;
     border-bottom: 1px solid #acacac ;
 }
+.location__group_invisible {
+    display: none;
+}
+.footer-bottom__adapt {
+    display: none;
+}
+@media all and (max-width: 800px) {
+    .footer-top__wrap {
+        border-bottom: none;
+        padding: 50px 0 0 0;
+    }
+    .footer-top__text {
+        font-size: 1.125em;
+    }
+    .footer-top__phone {
+        font-size: .625em;
+    }
+    .footer-bottom__heading, .footer-bottom__input-gpoup, .footer-bottom__item_del {
+        display: none;
+    }
+    .footer-bottom {
+        margin: 0px;
+    }
+    .footer-bottom__item {
+        flex-direction: column;
+        flex: 1 1 auto;
+    }
 
+    .footer-bottom__list {
+        display: flex;
+        justify-content: space-between;
+        padding: 19px 15px;
+        border-top: 1px solid #e6e7e7;
+    }
+    .footer-bottom__list::after {
+        content: "";
+        display: inline-block;
+        width: 10px;
+        height: 10px;
+        background: url(../image/icon/Plus.png) center / contain no-repeat;
+
+    }
+    
+    .location__group_invisible {
+        display: flex;
+        flex-direction: column;
+        margin: 42px 0 22px 0;
+    }
+    .location__link {
+        margin-top: 15px;
+    }
+    .footer-bottom__adapt {
+        width: 100%;
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        background-color: #e6e7e7;
+        align-items: center;
+        font-family: "Geometria";
+        font-size: .625em;
+        padding: 0 15px;
+
+    }
+    .footer-bottom__adapt-info {
+        display: flex;
+        
+    }
+    .footer-bottom__adapt-info div:first-child{
+        padding-right: 8px;
+        margin-right: 8px;
+        border-right: 1px solid #3a3a3a;
+    }
+    .footer-bottom__adapt-link {
+        color: #3a3a3a;
+    }
+}
