--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,3 +1,152 @@
 body
-    margin: 0
-    padding: 0
+	@extend %fontsfamily
+.main
+	overflow: hidden
+	min-height: 100vh
+	@extend %flexproperties
+	max-width: 1600px
+	margin: 0 auto
+
+.container
+	max-width: 1340px
+	margin: 0 auto
+	padding: 0 30px
+	@media (max-width: 1360px)
+		max-width: 1140px
+	@media (max-width: 960px)
+		max-width: 800px
+	@media (max-width: 768px)
+		max-width: none
+
+.img
+	width: 100%
+	height: 100%
+
+// ===================fullscreen=======================
+
+.screen
+	min-height: 100vh
+	width: 100%
+
+	&__bg
+		width: 100%
+		position: absolute
+		bottom: 0
+		left: 0
+		right: 0
+		background: center / cover no-repeat
+		@media ( max-width: 768px)
+			background-position-x: left
+
+		&_front
+			background-image: url('../images/pathfront.png')
+			padding-bottom: 32%
+			z-index: 2
+			@media ( max-width: 768px)
+				padding-bottom: 200%
+
+		&_back
+			background-image: url('../images/pathback.png')
+			padding-bottom: 27%
+			z-index: 1
+
+	&__body
+		position: absolute
+		left: 0
+		bottom: -120px
+		width: 100%
+		z-index: 3
+		@media (max-width: 768px)
+			bottom: -70px
+
+	&__container
+		display: flex
+		justify-content: space-between
+		@media (max-width: 768px)
+			display: inline-block
+
+	&__info
+		flex: 0 1 610px
+		align-self: center
+		margin-bottom: 25%
+		@media (max-width: 960px)
+			flex: 0 1 470px
+		@media (max-width: 768px)
+			margin-bottom: 5px
+			text-align: center
+			margin-top: 10px
+
+	&__text
+		line-height: 1.75em
+		margin-bottom: 40px
+
+	&__text-el
+		display: inline-block
+		@media (max-width: 960px)
+			display: inline
+
+	&__bth
+		width: 154px
+		min-height: 45px
+		@extend %bth
+		@extend %bthyellow
+		border: none
+		@media (max-width: 768px)
+			width: 100%
+			margin-bottom: 15px
+
+	&__info-link
+		display: none
+		color: inherit
+		font-size: 0.875em
+		line-height: 1.25em
+		@media (max-width: 768px)
+			display: inline-block
+
+	&__img
+		background-color: #ffff
+		border-radius: 50px
+		box-shadow: 0px 0px 10px #d6ccccfc inset
+		@media (max-width: 1600px)
+			max-height: 650px
+			max-width: 390px
+			padding: 80px 34px
+		@media (max-width: 960px)
+			max-height: 490px
+			max-width: 281px
+			padding: 65px 34px
+		@media (max-width: 768px)
+			height: 490px
+			max-width: 100%
+			padding: 48px 22px
+		@media (max-width: 500px)
+			height: 295px
+		@media  (min-width: 1600px)
+			max-height: 800px
+			max-width: 490px
+			padding: 100px 34px
+
+	&__picture
+		object-fit: cover
+		object-position: top
+
+	&__scroll
+		position: absolute
+		z-index: 5
+		bottom: 23px
+		left: 50%
+		transform: translate(-50%)
+		@extend %flexproperties
+		align-items: center
+		@media (max-width: 768px)
+			display: none
+	&__scroll-img
+		width: 33px
+		min-height: 50px
+		margin-bottom: 13px
+
+	&__scroll-text
+		text-transform: uppercase
+		font-size: 0.9375em
+		line-height: 1.375em
+		color: #ffff
