--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -1,8 +1,14 @@
-$main-color: green
+// =============Обнуление========================
+
+@import 'reset.sass'
+
+//===============Значения========================
+
+@import 'meaning.sass'
+// ==============Стили header====================
+
+@import 'header.sass'
+
+//================Основные стили==================
 
 @import 'main.sass'
-@import 'style2.sass'
-
-.main
-    background: $main-color
-    color: white
