--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,38 +1,58 @@
 .header
-	+positionproperties (absolute,0,0)
+	position: relative
 	width: 100%
-	z-index: 3
+	z-index: 30
+	&::after
+		@extend %element
+		top: 0
+		width: 100%
+		height: 100%
+		background-color: #ffff
+		z-index: 1
 
 	&__body
+		position: relative
 		min-height: 90px
-		display: flex
-		justify-content: space-between
-		align-items: center
+		+flexproperties (space-between, center)
 
 	&__burger
 		display: none
 		@media (max-width: 767px)
 			display: block
 			position: relative
+			z-index: 2
 			width: 30px
 			height: 19px
 		&::after
 			@extend %element
 			@extend %burger
 			top: 0
+			transition: all 0.3s ease 0s
 		&::before
 			@extend %element
 			@extend %burger
 			bottom: 0
+			transition: all 0.3s ease 0s
+		&.active::before
+			transform: rotate(-45deg)
+			bottom: 8px
+		&.active::after
+			transform: rotate(45deg)
+			top: 8px
+		&.active .header__drawing
+			transform: scale(0)
 
 	&__drawing
 		@extend %burger
 		position: absolute
 		top: 8px
+		transition: all 0.3s ease 0s
 
 	&__logo
 		width: 184px
 		height: 55px
+		position: relative
+		z-index: 2
 		@media (max-width: 767px)
 			width: 120px
 			height: 35px
@@ -40,15 +60,22 @@
 	&__user
 		display: flex
 		align-items: center
+		position: relative
+		z-index: 2
 		@media (max-width: 767px)
-			display: none
 			width: 100%
 			height: 667px
-			padding: 94px 0 0 10px
-			+positionproperties (absolute,0,0)
+			padding: 28px 0 0 30px
+			position: absolute
+			top: -667px
+			left: 0
+			z-index: 0
 			flex-direction: column
 			align-items: flex-start
-			z-index: 3
+			background-color: #ffff
+			transition: all 0.7s ease 0s
+			&.active
+				top: 62px
 
 	&__link
 		margin-right: 30px
@@ -70,7 +97,7 @@
 	&__menu
 		display: none
 		@media (max-width: 767px)
-			display: none
+			display: inline-block
 			width: 100%
 
 	&__list
