--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,27 +1,3 @@
-body
-	@extend %fontsfamily
-.main
-	overflow: hidden
-	min-height: 100vh
-	@extend %flexproperties
-	max-width: 1600px
-	margin: 0 auto
-
-.container
-	max-width: 1340px
-	margin: 0 auto
-	padding: 0 30px
-	@media (max-width: 1360px)
-		max-width: 1140px
-	@media (max-width: 960px)
-		max-width: 800px
-	@media (max-width: 768px)
-		max-width: none
-
-.img
-	width: 100%
-	height: 100%
-
 // ===================fullscreen=======================
 
 .screen
@@ -41,23 +17,22 @@ body
 		&_front
 			background-image: url('../images/pathfront.png')
 			padding-bottom: 32%
-			z-index: 2
+			z-index: 1
 			@media ( max-width: 768px)
 				padding-bottom: 200%
 
 		&_back
 			background-image: url('../images/pathback.png')
 			padding-bottom: 27%
-			z-index: 1
 
 	&__body
 		position: absolute
 		left: 0
 		bottom: -120px
 		width: 100%
-		z-index: 3
+		z-index: 2
 		@media (max-width: 768px)
-			bottom: -70px
+			bottom: -72px
 
 	&__container
 		display: flex
@@ -116,7 +91,7 @@ body
 			max-width: 281px
 			padding: 65px 34px
 		@media (max-width: 768px)
-			height: 490px
+			height: 390px
 			max-width: 100%
 			padding: 48px 22px
 		@media (max-width: 500px)
@@ -136,7 +111,7 @@ body
 		bottom: 23px
 		left: 50%
 		transform: translate(-50%)
-		@extend %flexproperties
+		@extend %flexcolumns
 		align-items: center
 		@media (max-width: 768px)
 			display: none
