--- a/src/styles/meaning.sass
+++ b/src/styles/meaning.sass
@@ -17,15 +17,41 @@
 	font-weight: 600
 	font-style: normal
 
+// ===============ОСНОВНЫЕ ЗНАЧЕНИЯ=====================================
+
+body
+	@extend %fontsfamily
+.main
+	overflow: hidden
+	min-height: 100vh
+	@extend %flexcolumns
+	max-width: 1600px
+	margin: 0 auto
+
+.container
+	max-width: 1340px
+	margin: 0 auto
+	padding: 0 30px
+	@media (max-width: 1360px)
+		max-width: 1140px
+	@media (max-width: 960px)
+		max-width: 800px
+	@media (max-width: 768px)
+		max-width: none
+
+.img
+	width: 100%
+	height: 100%
+
 //===============ПЕРЕМЕННЫЕ===============================
 
 %fontsfamily
 	font-family: 'Open Sans', sans-serif, Arial
 	color: #000000
 
-//============== flex свойства============================
+//============== flex свойства колонки ============================
 
-%flexproperties
+%flexcolumns
 	display: flex
 	flex-direction: column
 
@@ -62,3 +88,10 @@
 	content: ""
 	position: absolute
 	left: 0
+
+//===========================FLEX СВОЙСТВА===============================================================
+
+=flexproperties ($jc,$ai)
+	display: flex
+	justify-content: $jc
+	align-items: $ai
